fix border repeat bug & gaussian overflow bug

--- a/demo/main.scss
+++ b/demo/main.scss
@@ -16,7 +16,7 @@ body {
 }
 
 #regl canvas {
-  width: 1000px;
+  width: 10000px;
   height: 600px;
 }
 
